Update tox config to avoid ImportPathMismatchError

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ max-line-length = 88
 
 [testenv]
 deps =
-  black
+  black >= 21.4b2
   flake8
   pytest
   mypy
@@ -25,5 +25,6 @@ commands =
   flake8
   # mypy --ignore-missing-imports src/
   # mypy src/
-  pytest --doctest-modules
+  pytest
+  pytest --doctest-modules src
 
