--- a/tox.ini
+++ b/tox.ini
@@ -25,5 +25,6 @@ commands =
   flake8
   # mypy --ignore-missing-imports src/
   # mypy src/
-  pytest --doctest-modules
+  pytest --doctest-modules src/
+  pytest test/
 
